--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ theme: jekyll-theme-chirpy
 
 # Only if your site type is GitHub Project sites and doesn't have a custom domain,
 # change below value to '/projectname'.
-baseurl: ''
+baseurl: '/en'
 
 # the HTML language tag › https://www.w3.org/International/questions/qa-choosing-language-tags =))
 lang: en-US
@@ -21,8 +21,8 @@ tagline: Hello Bigdata !   # it will display as the sub-title
 
 description: >-                        # used by seo meta and the atom feed
   (c) Copyright Demanejar. 
-  Một website nhỏ về bigdata 
-  được viết bởi team Demanejar.
+  A small website about Bigdata 
+  writen by team Demanejar.
   
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
 url: 'https://demanejar.github.io'
