--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ theme: jekyll-theme-chirpy
 
 # Only if your site type is GitHub Project sites and doesn't have a custom domain,
 # change below value to '/projectname'.
-baseurl: '/en'
+baseurl: 'en'
 
 # the HTML language tag › https://www.w3.org/International/questions/qa-choosing-language-tags =))
 lang: en-US
@@ -25,7 +25,7 @@ description: >-                        # used by seo meta and the atom feed
   writen by team Demanejar.
   
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
-url: 'https://demanejar.github.io'
+url: 'https://demanejar.github.io/en'
 
 github:
   username: demanejar             # change to your github username
